// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render 1`] = `
<ul
  class="sc-AxhUy ijoyzq"
/>
`;

exports[`Menu should render closed menu 1`] = `
<ul
  class="sc-AxhUy ijoyzq"
>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#home"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
          />
          <span
            class="sc-Axmtr hZJHVn menu-text"
          >
            Home
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#users"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
          />
          <span
            class="sc-Axmtr hZJHVn menu-text"
          >
            Users
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#devices"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
          />
          <span
            class="sc-Axmtr hZJHVn menu-text"
          >
            Devices
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#costs"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
          />
          <span
            class="sc-Axmtr hZJHVn menu-text"
          >
            Costs
          </span>
        </div>
      </a>
    </div>
  </li>
</ul>
`;

exports[`Menu should render items 1`] = `
<ul
  class="sc-AxhUy ijoyzq"
>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#home"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
          />
          <span
            class="sc-Axmtr hZKuXu menu-text"
          >
            Home
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#users"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
          />
          <span
            class="sc-Axmtr hZKuXu menu-text"
          >
            Users
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#devices"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
          />
          <span
            class="sc-Axmtr hZKuXu menu-text"
          >
            Devices
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#costs"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
          />
          <span
            class="sc-Axmtr hZKuXu menu-text"
          >
            Costs
          </span>
        </div>
      </a>
    </div>
  </li>
</ul>
`;

exports[`Menu should render open menu 1`] = `
<ul
  class="sc-AxhUy ijoyzq"
>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#home"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
          />
          <span
            class="sc-Axmtr hZKuXu menu-text"
          >
            Home
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#users"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
          />
          <span
            class="sc-Axmtr hZKuXu menu-text"
          >
            Users
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#devices"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
          />
          <span
            class="sc-Axmtr hZKuXu menu-text"
          >
            Devices
          </span>
        </div>
      </a>
    </div>
  </li>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <a
        href="#costs"
      >
        <div
          class="sc-AxheI dkiJtT"
        >
          <span
            class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
          />
          <span
            class="sc-Axmtr hZKuXu menu-text"
          >
            Costs
          </span>
        </div>
      </a>
    </div>
  </li>
</ul>
`;

exports[`Menu should render without link component 1`] = `
<ul
  class="sc-AxhUy ijoyzq"
>
  <li
    class="sc-AxgMl fdAvPR"
  >
    <div
      class="sc-AxiKw iCNkRr"
      font-family="exo"
    >
      <div
        class="sc-AxheI dkiJtT"
      >
        <span
          class="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
        />
        <span
          class="sc-Axmtr hZKuXu menu-text"
        >
          Home
        </span>
      </div>
    </div>
  </li>
</ul>
`;
